@@ -10,6 +10,7 @@ has '+size'                 => ( default => 8 );
 has 'precision'             => ( isa => 'Int|Undef', is => 'rw', default => 2 );
 has 'decimal_symbol'        => ( isa => 'Str', is => 'rw', default => '.');
 has 'decimal_symbol_for_db' => ( isa => 'Str', is => 'rw', default => '.');
+has '+deflate_method'       => ( default => sub { \&float_deflate } );
 
 our $class_messages = {
     'float_needed'      => 'Must be a number. May contain numbers, +, - and decimal separator \'[_1]\'',
@@ -37,16 +38,6 @@ apply(
         },
     ]
 );
-
-sub deflate {
-    my ( $self, $value ) = @_;
-
-    my $symbol      = $self->decimal_symbol;
-    my $symbol_db   = $self->decimal_symbol_for_db;
-    $value =~ s/\Q$symbol_db\E/$symbol/x;
-
-    return $value;
-}
 
 sub validate {
     my $field = shift;
@@ -85,6 +76,15 @@ sub validate {
     return 1;
 }
 
+sub float_deflate {
+    my ( $self, $value ) = @_;
+
+    my $symbol      = $self->decimal_symbol;
+    my $symbol_db   = $self->decimal_symbol_for_db;
+    $value =~ s/\Q$symbol_db\E/$symbol/x;
+
+    return $value;
+}
 
 __PACKAGE__->meta->make_immutable;
 use namespace::autoclean;
