@@ -329,6 +329,7 @@ has 'auto_widget_size' => ( isa => 'Int',       is => 'rw', default => '0' );
 has 'sort_column'      => ( isa => 'Str',       is => 'rw' );
 has '+widget'          => ( default => 'select' );
 has 'empty_select'     => ( isa => 'Str',       is => 'rw' );
+has '+deflate_method'  => ( default => sub { \&select_deflate } );
 has '+input_without_param' => ( lazy => 1, builder => 'build_input_without_param' );
 sub build_input_without_param {
     my $self = shift;
@@ -528,7 +529,7 @@ before 'value' => sub {
     }
 };
 
-sub deflate {
+sub select_deflate {
     my ( $self, $value ) = @_;
 
     return $value unless ( $self->has_many && $self->multiple );
